# homework

./: .coverage  .env-example  .flake8  .gitignore  README.md  pyproject.toml
src/: currency_converter.py  decorators.py  excel_parser.py  generators.py  logger.py  main.py  masks.py  processing.py  utils.py
tests/: test_currency_converter.py  test_decorators.py  test_excel_parser.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py
