[tool.poetry]
name = "pythonproject13"
version = "0.1.0"
description = ""
authors = ["Katrin <Carpe_diemsk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flake8 = "^7.1.2"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
coverage = "^7.8.0"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
pandas = "^2.3.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line-length = 119
multi_line_output = 1
exclude = "venv"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
line-length = 119
exclude = ".git"